project/log/20250611_022927.log
Hello DirectX!

clientSize:1280,720

Use Adapater: NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel: 12.2 

Complete create D3D12Device!!!!

Begin CompileShader, path:object3D.VS.hlsl, profile:vs_6_0

Compile Succeded, path:object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:object3D.PS.hlsl, profile:ps_6_0

object3D.PS.hlsl:35:18: error: no member named 'enablelighting' in 'Material'; did you mean 'enableLighting'?
    if(gMaterial.enablelighting != 0)
                 ^~~~~~~~~~~~~~
                 enableLighting
object3D.PS.hlsl:6:13: note: 'enableLighting' declared here
    int32_t enableLighting;   
            ^

